--- a/FPT Library/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FPT Library/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,9 +18,19 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
+                <input asp-for="Input.FullName" class="form-control" autocomplete="username" aria-required="true" placeholder="Ly Van A" />
+                <label asp-for="Input.FullName">Full Name</label>
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
                 @Html.DropDownList("Input.Role", new SelectList(Model.Roles,"Name","Name"), new {@class = "form-control"})
                 <label asp-for="Input.Role">Role</label>
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.HomeAddress" class="form-control" autocomplete="username" aria-required="true" placeholder="000 Street" />
+                <label asp-for="Input.HomeAddress">Home Address</label>
+                <span asp-validation-for="Input.HomeAddress" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
@@ -32,6 +42,7 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
