--- a/FPT Library/Views/Books/Delete.cshtml
+++ b/FPT Library/Views/Books/Delete.cshtml
@@ -23,6 +23,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Category)
         </dd>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Author)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Author)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
