--- a/FPT Library/Views/Shared/_Layout.cshtml
+++ b/FPT Library/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Create">Add Books</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CartItems" asp-action="Index">Borrow Books</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
