--- a/FPT Library/Views/Shared/_Layout.cshtml
+++ b/FPT Library/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Create">Add Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CartItems" asp-action="Index">Borrow Books</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CartItems" asp-action="Index">Purchase Books</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
