--- a/FPT Library/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FPT Library/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.FullName" class="form-control" autocomplete="username" aria-required="true" placeholder="Ly Van A" />
+                <input asp-for="Input.FullName" class="form-control" autocomplete="" aria-required="true" placeholder="Ly Van A" />
                 <label asp-for="Input.FullName">Full Name</label>
                 <span asp-validation-for="Input.FullName" class="text-danger"></span>
             </div>
